crates/llvmkit-ir/tests/compile_fail/vec_binop_element_mismatch.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/vec_binop_element_mismatch.rs:33:43
   |
33 |         let _bad = b.build_vec_int_add(a, c, "x").unwrap(); //~ ERROR mismatched types
   |                      -----------------    ^ expected `VectorValue<'_, i32, Len<4>>`, found `VectorValue<'_, i64, Len<4>>`
   |                      |
   |                      arguments to this method are incorrect
   |
   = note: expected struct `VectorValue<'_, i32, Len<4>, Brand<'_>>`
              found struct `VectorValue<'_, i64, Len<4>, Brand<'_>>`
note: method defined here
  --> src/ir_builder.rs
   |
   |     pub fn build_vec_int_add<E, L, Name>(
   |            ^^^^^^^^^^^^^^^^^
